# Airbnb-Lombardy-Analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.ipynb
src/notebooks/: data_exploration.ipynb  main.html  main.ipynb
src/utils/: neighborhood_cleaning.py  null_analyzer.py  target_var_inspection.py
